# IoTBook

./: README.md
esp32/examples/dht11/: CMakeLists.txt
esp32/examples/dht11/main/: CMakeLists.txt  mqtt_demo_mutual_auth.c
esp32/examples/dummy_adxl345/: CMakeLists.txt
esp32/examples/dummy_adxl345/main/: mqtt_demo_mutual_auth.c
esp32/examples/mqtt_cam/main/: CMakeLists.txt  app_main.c  mqtt_demo_mutual_auth.c
esp32/examples/mqtt_led/main/: Kconfig.projbuild  mqtt_demo_mutual_auth.c
esp32/examples/mqtt_led/main/certs/: client.crt  client.key
esp32/examples/tls_mutual_auth/: sdkconfig  sdkconfig.old
frontend/: index.html
lambda/: getDynamoDBStatus.py  sendCommand.py
predictive_maintenance/lambda/: anomaly-detection.py  get-exec-datetime.py  kfs-json2csv.py
predictive_maintenance/notebook/: section6-data-processing.ipynb  section6_nasa-bearing.ipynb
predictive_maintenance/sfn/: anomaly-detection.asl.json
scripts/: prepare_data.ps1  prepare_data.sh
